<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/LightCyan1"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/paleTurquoise"
        android:padding="16dp">

        <ImageView
            android:id="@+id/infinito"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo3"
            android:src="@drawable/ic_baseline_all_inclusive_24"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/smile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo2"
            android:src="@drawable/ic_baseline_emoji_emotions_24"
            app:tint="@color/green_degrade" />

        <ImageView
            android:id="@+id/ajuda"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_baseline_help_24" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_marginTop="200dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/contamos_com_sua_participacao"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/texto"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_marginStart="300dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="300dp"
        android:layout_marginBottom="300dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/seja_bem_vindo_ao_nosso_grupo"
        android:textSize="20sp" />

    <View
        android:layout_width="200dp"
        android:layout_height="5dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="330dp"
        android:background="@color/black"
        android:elevation="5dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="600dp"
        android:backgroundTint="@color/orange"
        android:drawableTint="@color/white"
        android:foregroundTint="@color/white"
        android:text="@string/conhe_a_a_verdade" />
</RelativeLayout>