<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/LDeepPink"
    tools:context=".SegundaTela">

    <TextView
        android:id="@+id/ola"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="casual"
        android:padding="20dp"
        android:text="@string/ola"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/vamos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ola"
        android:gravity="center"
        android:padding="30dp"
        android:text="@string/vamos_comecar" />


    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:autofillHints=""
        android:gravity="center"
        android:inputType="text"

        android:hint="@string/Qual_seu_nome"
        android:textAllCaps="false"
        android:textSize="20sp" />


    <Button

        android:id="@+id/edit_botao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="32dp"
        android:text="@string/salvar_nome"/>
</RelativeLayout>